--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,14 @@
     "@angular/compiler": "^17.1.0",
     "@angular/core": "^17.1.0",
     "@angular/forms": "^17.1.0",
+    "@angular/material": "^17.1.2",
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.1",
     "express": "^4.18.2",
+    "primeicons": "^6.0.1",
     "primeng": "^17.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
