--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,26 +12,26 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/material": "^17.1.1",
-        "@angular/ssr": "^17.1.1",
-        "express": "^4.18.2",
-
         "@angular/animations": "^17.0.5",
         "@angular/cdk": "^17.0.2",
         "@angular/common": "^17.0.5",
         "@angular/compiler": "^17.0.5",
         "@angular/core": "^17.0.5",
         "@angular/forms": "^17.0.5",
+        "@angular/material": "^17.1.1",
         "@angular/platform-browser": "^17.0.5",
-        "@angular/platform-server": "^17.1.0",
         "@angular/platform-browser-dynamic": "^17.0.5",
+        "@angular/platform-server": "^17.1.0",
         "@angular/router": "^17.0.5",
+        "@angular/ssr": "^17.1.1",
         "@fullcalendar/angular": "^6.0.3",
         "@fullcalendar/core": "^6.0.3",
         "@fullcalendar/daygrid": "^6.0.3",
         "@fullcalendar/interaction": "^6.0.3",
         "@fullcalendar/timegrid": "^6.0.3",
         "chart.js": "^3.3.2",
+        "date-fns": "^3.3.1",
+        "express": "^4.18.2",
         "iconv-lite": "^0.6.3",
         "primeflex": "^3.3.1",
         "primeicons": "6.0.1",
