--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,6 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
-    "@sendgrid/mail": "^8.1.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -18,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.9",
     "path-to-regexp": "^6.2.1"
   },
   "devDependencies": {
