--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,10 +29,12 @@
         "@fullcalendar/daygrid": "^6.0.3",
         "@fullcalendar/interaction": "^6.0.3",
         "@fullcalendar/timegrid": "^6.0.3",
+        "angular-calendar": "^0.31.0",
         "chart.js": "^3.3.2",
-        "date-fns": "^3.3.1",
+        "date-fns": "^2.29.3",
         "express": "^4.18.2",
         "iconv-lite": "^0.6.3",
+        "moment": "^2.30.1",
         "primeflex": "^3.3.1",
         "primeicons": "6.0.1",
         "primeng": "17.2.0",
